--- a/css/predmet.css
+++ b/css/predmet.css
@@ -1,9 +1,20 @@
-#meni {
-    margin: auto;
-    text-align: center; 
-    position: fixed;
+html {
+    scroll-padding-top: 180px;
+}
+
+body {
     width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+#meni {
+    text-align: center; 
+    width: 100%;
+    position: sticky;
+    top: 0px;
     font-size: larger;
+    background-color: antiquewhite;
 }
 
 .meni1 {
@@ -26,7 +37,6 @@ li {
 
 .sadrzaj {
     text-align: center;
-    padding-top: 150px;
 }
 
 .naslov {
@@ -42,7 +52,8 @@ li {
 }
 
 .grid_kontejner {
-    padding: 20px;
+    margin: 5px;
+    padding: 5px;
     border: 2px solid black;
     display: grid;
     grid-template-columns: repeat(auto-fill, 200px);
