dodan media query koji fiksira meni i prikazuje odsijeke u meniju jedan pod drugim za male ekrane

--- a/css/predmet.css
+++ b/css/predmet.css
@@ -75,3 +75,18 @@ li {
 .bijela {
     background-color: white;
 }
+
+@media only screen and (max-width: 1004px) {
+    html {
+        scroll-padding-top: 40px;
+    }    
+ 
+    #meni {
+        position: static;
+    }
+    
+    .meni1 {
+        display: block;
+        text-align: center;
+    }   
+}
