imena boja promijenjena u vrstu predmeta

--- a/css/predmet.css
+++ b/css/predmet.css
@@ -72,15 +72,15 @@ li {
     border: 2px solid black;
 }
 
-.plava {
+.izborni {
     background-color: powderblue;
 }
 
-.siva {
+.ne_idu {
     background-color: gray;
 }
 
-.bijela {
+.redovni {
     background-color: white;
 }
 
