--- a/css/prisustvo.css
+++ b/css/prisustvo.css
@@ -1,11 +1,27 @@
+body {
+    margin: 15px;
+}
+
 .predmet_info {
+    margin-bottom: 20px;
     display: grid;
     text-align: center;
     border: 2px solid rosybrown;
-    margin: 10px;
     font-style: italic;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:chocolate;
+}
+
+table {
+    border-collapse: collapse;
+    margin: auto;
+}
+
+td, th {
+    border: 2px solid black;
+    padding: 13px 10px;
+    text-align: left;
+    vertical-align: top;
 }
 
 
