Dodane boje za celije koje oznacavaju prisutstvo

--- a/css/prisustvo.css
+++ b/css/prisustvo.css
@@ -24,5 +24,13 @@ td, th {
     vertical-align: top;
 }
 
+.zelena {
+    background-color: lightgreen;
+}
+
+.crvena {
+    background-color: lightcoral;
+}
+
 
 
