--- a/css/prisustvo.css
+++ b/css/prisustvo.css
@@ -14,7 +14,7 @@ body {
 
 table {
     border-collapse: collapse;
-    margin: auto;
+    width: 100%;
 }
 
 td, th {
@@ -30,6 +30,11 @@ td, th {
 
 .crvena {
     background-color: lightcoral;
+}
+
+
+.zadnja_kolona {
+    width: 40%;
 }
 
 
