--- a/css/prisustvo.css
+++ b/css/prisustvo.css
@@ -19,7 +19,7 @@ table {
 
 td, th {
     border: 2px solid black;
-    padding: 13px 10px;
+    padding: 15px 10px;
     text-align: left;
     vertical-align: top;
 }
@@ -34,7 +34,11 @@ td, th {
 
 
 .zadnja_kolona {
-    width: 40%;
+    width: 50%;
+}
+
+.center {
+    text-align: center;
 }
 
 
