--- a/public/css/predmeti.css
+++ b/public/css/predmeti.css
@@ -14,6 +14,10 @@ body {
     padding: 0px;
 }
 
+.min_width {
+    min-width: 150px;
+}
+
 .logout:hover {
     color: lightskyblue;
     background-color: lightgrey;
