--- a/public/css/prisustvo.css
+++ b/public/css/prisustvo.css
@@ -43,6 +43,10 @@ button {
     text-align: center;
 }
 
+p {
+    text-align: center;
+}
+
 @media only screen and (max-width: 683px) {
     html {
         min-width: 685px;
