--- a/public/css/prisustvo.css
+++ b/public/css/prisustvo.css
@@ -57,6 +57,10 @@ p {
     transform: translateY(-2px); /* lift the element 10px up on hover */
 }
 
+.popup:active {
+    cursor: grab;
+}
+
 @media only screen and (max-width: 683px) {
     html {
         min-width: 685px;
